...
    <string-array name="settings_speed_format_values" translatable="false">
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
    </string-array>

    <string name="settings_title">Settings</string>

    <string name="switch_state_on">On</string>
    <string name="switch_state_off">Off</string>

    <!-- Onboarding Strings -->

...
